@@ -1,0 +1,9 @@
+Title: fixed graphs displaying wrong labels
+Level: 1
+Component: multisite
+Compatible: compat
+Version: 1.2.8p12
+Date: 1473855295
+Class: fix
+
+
